successfully finally got traces working but it's stupid